# WeldFormGUI

./: .env.example  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  DEVLOG.txt  Dialogs.txt  HighLightPicked.cpp  Install.md  ProgramDescription.txt  README.md  README_CODE.md  TASK_CONTEXT_TEMPLATE.md  imgui.ini  make.bat  output_smoothed.bdf  senafor_2026_part_0.bdf
Wrapping/Python/: __init__.py.in
cmake/: WriteGitHash.cmake
core/: BaseFEMScene.py  GUIA_COLORES.txt  element.py  matrix.py  matrix_utils.py  shape_functions.py  test.py  test_shape_functions.py
data/: picking.fs  sphere.blend  sphere.dae
data/shaders/: instance.vs  shader.vs  text.fs
doc/: UsersGuide.md  WeldFormGUI_Guide.md  geom.md  references.txt
docs/: DEVLOG.txt  Install.md  README.md  README_CODE.md  UsersGuide.md
docs/ref/: ORIGINAL RENDER AND PICKING PHASE.txt  README_renderer.txt  basic shading.txt  flat shaded.txt  instancing.txt  renderer.cpp
examples/: line_2D.STEP  quad_2.STEP
examples/demo/: demo.json
examples/geo/: box.geo  plate_w_hole.geo
examples/input/: model.json
libs/: CMakeLists.txt
libs/ImGuiFileDialog-0.6.4/: ImGuiFileDialog.cpp  ImGuiFileDialogConfig.h
libs/freetype-2.10.4/: CMakeLists.txt
libs/freetype-2.10.4/build_nmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  freetyped.lib
libs/gl3w/: CMakeLists.txt
libs/glfw-3.3.4/: CMakeLists.txt
libs/gmsh/: CMakeLists.txt  LEEME.txt
libs/gmsh/contrib/Netgen/: LICENSE  README.txt  nglib_gmsh.cpp  nglib_gmsh.h
libs/gmsh/doc/: WELCOME.txt
libs/gmsh/src/common/: GamePad.cpp  GmshConfig.h  GmshVersion.h
libs/implot-1.0/: implot.cpp  implot_items.cpp
ref/: quad_instancing.cpp  vtk_imgui.txt
resources/: imgui.ini
results/: results.h
scripts/: Radioss.py  Sphere.py  add_devlog.sh  build_linux.sh  build_wfresult.py  compression_3d_imp_gmsh.py  contact_compression_3d_imp.py  copiar.sh  copy_solvers_to_gui_bin.sh  demo_part_0.step  easy_import_n_mesh.py  easy_workflow.py  export_abaqus.py  export_radioss.py  plot_final_plastic_deformation.py  plot_last_wfresult.py  qform2weldform.py  selection.py  test.py  use_solver_full.sh  use_solver_std.sh
scripts/extrusion_script/: demo_part_2.step  extrusion_workflow.py
scripts/windows/: copy.bat  (+1 more)
src/: CMakeLists.txt  CMakeLists_OLD.txt  CMakeLists_only_test.txt  CMakeLists_test.txt  Dialog.h  Domain.cpp  Domain.h  FrameBuffer.h  HighlightPickedActor.h  Job.cpp  Job.h  LSDynaWriter.cpp  LSDynaWriter.h  Material.h  Material_Db.h  QuadGMesh.h  SceneView.h  Solver.h  ViewportWindow.cpp  ViewportWindow.h  VtkViewer.cpp  VtkViewer.h  action.cpp  action.h  bc_dialog.cpp  bc_dialog.h  console.cpp  console.h  demo_dialog.cpp  demo_dialog.h  dialog.h  double3.h  editor.cpp  editor.h  editor_OLD.cpp  editor_app.cpp  editor_app.h  editor_new.h  energy_plot_dialog.cpp  energy_plot_dialog.h  (+52 more)
src/App/: App.cpp  App.h  CMakeLists.txt
src/OLD_ownrenderer/: FrameBuffer.cpp  main_OLD.cpp  selector.h
src/OLD_ownrenderer/graphics/: AABB.h  AxisAlignedBox.h  CMakeLists.txt  ShapeData.h  arcball_camera.cpp  camera_edit.cpp  ogldev_app.h  ogldev_basic_lighting.h  ogldev_glfw_backend.h  ogldev_pipeline.h  ogldev_shadow_map_fbo.cpp  ogldev_shadow_map_fbo.h  ogldev_texture.cpp  picking_texture.cpp  picking_texture.h  shapes.cpp  technique.cpp
src/common/: CMakeLists.txt  types.h
src/common/2D/: Transformations.h  Wall2D.h  geometry.h
src/common/Debug/: DebugConsole.h
src/common/FSM/: StateMachine.h
src/common/Game/: BaseGameEntity.h  Region.h
src/common/math/: Vector.h  math.h  math_.h
src/common/misc/: Cgdi.h  Stream_Utility_Functions.h  Utils.h
src/common/platform/: WindowsHeaders.h
src/editor/: CMakeLists.txt  editor.cpp  editor.h
src/geom/: CMakeLists.txt  Geom.cpp  Geom.h  ShapeToPolyData.cpp  ShapeToPolyData.h  vtkOCCTGeom.cpp  vtkOCCTGeom.h
src/graphicmesh/: CMakeLists.txt  GraphicMesh.cpp  GraphicMesh.h  GraphicModel.h
src/graphics/: CMakeLists.txt  ModelGizmo.h  PolyDataCollisionSystem.h  Renderer.cpp  Renderer.h  SceneNode.h  TransformGizmo.h  arcball_camera.cpp  arcball_camera.h  arcball_camera_ORIG.cpp  arcball_camera_ORIG.h  axis.cpp  axis.h  camera.cpp  gMesh.cpp  math_3d.cpp  ogldev_app.cpp  ogldev_app.h  ogldev_backend.cpp  ogldev_basic_lighting.cpp  ogldev_basic_mesh.h  ogldev_camera.h  ogldev_cubemap_texture.h  ogldev_engine_common.h  ogldev_glfw_backend.cpp  ogldev_lights_common.h  ogldev_math_3d.h  ogldev_mesh.h  ogldev_skinned_mesh.h  ogldev_texture.h  ogldev_util.h  picking_technique.cpp  picking_technique.h  picking_texture.cpp  picking_texture.h  quaternion.h  renderer.h  shadow_map_technique.cpp  shadow_map_technique.h  shapes.h  (+3 more)
src/graphics/shaders/: vert.shader
src/graphics/shaders/logl/: anim_model_vs.glsl
src/io/: CMakeLists.txt  InputReader.cpp  InputReader.h  InputWriter.cpp  InputWriter.h  ModelReader.cpp  ModelReader.h  ModelWriter.cpp  ModelWriter.h  json_io.h
src/model/: BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  Condition.h  Domain.cpp  Element.cpp  Element.h  ElementType.h  Entity.cpp  Entity.h  Face.h  Geom.cpp  Geom.h  Geom_NO.cpp  InitialCondition.h  Line.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NastranReader.cpp  NastranReader.h  Node.h  Part.cpp  Part.h  Prop.h  SPHMesh.cpp  SPHModel.cpp  SPHModel.h  Section.h  Set.h  SetWorkflow.h  Step.h  gMesh.cpp  gMesh.h
src/modelcheck/: ModelCheck.cpp  ModelCheck.h
src/python/: App.h  App_NO.cpp.txt  CMakeLists.txt  Dummy.h  WorkflowAPI.h  WorkflowBridge.cpp  editor.i_ERROR  file_with_vtk_data.i.txt  model.i  pywfGUI.i
src/python/test/: example.h  example.i  readme.md  setup.py  test.py
src/results/: Results.cpp  Results.h  animation.cpp  how_to_set_name.cpp  load_with_model.cpp  readme.md  results.cpp  results.h  results_ex.cpp  results_simple.h
src/tools/: MeasurementTool.cpp  MeasurementTool.h
tests/: CMakeLists.txt  HighlightPickedActor.cpp  gmsh_test.cpp  python_output.cpp
tests/IOCCT/: CMakeLists.txt  TestOCCTReader.cpp
tests/readvtu/: ReadUnstructureGrid.cpp  readvtu.xt
(+289 files in other folders)
