include_directories("${CMAKE_SOURCE_DIR}/libs/gmsh/")
include_directories("${CMAKE_SOURCE_DIR}/libs/gmsh/api")
include_directories("${CMAKE_SOURCE_DIR}/libs/gmsh/src/common")
include_directories("${CMAKE_SOURCE_DIR}/libs/gmsh/src/geo")
include_directories("${CMAKE_SOURCE_DIR}/libs/gmsh/src/graphics")
include_directories("${CMAKE_SOURCE_DIR}/libs/gmsh/src/mesh")
include_directories("${CMAKE_SOURCE_DIR}/libs/gmsh/src/numeric")


add_subdirectory(IOCCT)




