add_library (common
			"2D/Vector2d.cpp"
			"Debug/DebugConsole"
			"game/BaseGameEntity.cpp"
			"game/EntityManager.cpp"
			"Messaging/MessageDispatcher.cpp"
			"Messaging/MessageDispatcher.cpp"
			"misc/Cgdi.cpp"			
			"misc/FrameCounter.cpp"
			"misc/iniFileLoaderBase.cpp"
			#"misc/WindowUtils.cpp"
			"Time/PrecisionTimer.cpp"
			)
		
